Add confirmation face images to boarding events
